# tsundoku-accelerator-backend

./: .gitignore  Cargo.toml  Makefile.toml  README.md  samconfig.toml  template.yaml
.aws-sam/: build.toml
.github/workflows/: main.yml
apps/backend-cli/: Cargo.toml
apps/backend-cli/src/: main.rs
backend-cli/: Cargo.toml
backend-cli/src/: main.rs
domains/: Cargo.toml
domains/src/: lib.rs
domains/src/ebook_snapshots/: mod.rs  model.rs
domains/src/ebook_snapshots/repositories/: db.rs  mod.rs  scraper.rs
domains/src/ebook_snapshots/repositories/snapshots/: domains__ebook_snapshots__repositories__scraper__tests__get-2.snap  domains__ebook_snapshots__repositories__scraper__tests__get.snap
domains/src/ebooks/: mod.rs
domains/src/infrastructures/: mod.rs  prisma.rs
domains/src/infrastructures/db/: ebook.rs  ebook_snapshot.rs  mod.rs  prisma.rs  wish_list.rs
domains/src/infrastructures/scraper/: ebook_snapshot.rs  item_meta_data.rs  mod.rs  wish_list.rs  wish_list_snapshot.rs
domains/src/infrastructures/scraper/snapshots/: domains__infrastructures__scraper__ebook_snapshot__tests__get-2.snap  domains__infrastructures__scraper__ebook_snapshot__tests__get.snap  domains__infrastructures__scraper__tests__get_item_urls.snap  domains__infrastructures__scraper__wish_list_snapshot__tests__get_item_urls.snap
domains/src/models/: mod.rs
domains/src/services/: mod.rs
domains/src/wish_lists/: mod.rs
domains/src/wish_lists/repositories/scraper/: mod.rs
domains/src/wish_lists/repositories/scraper/snapshots/: domains__wish_lists__repositories__scraper__tests__get_item_urls.snap
infrastructures/: Cargo.toml
infrastructures/prisma/: schema.prisma
infrastructures/src/: lib.rs  prisma.rs
infrastructures/src/db/: mod.rs  prisma.rs
infrastructures/src/models/: mod.rs
infrastructures/src/scraper/: mod.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/manual-migrations/: 001_delete_cascade.sql
prisma/migrations/20220826123140_init/: migration.sql
prisma/migrations/20220827042219_add_items/: migration.sql
prisma/migrations/20221001110002_init/: migration.sql
prisma/migrations/20221001112620_int_to_float/: migration.sql
prisma/migrations/20221008091153_nullable/: migration.sql
prisma/migrations/20221009053857_remove_title/: migration.sql
pure-funcs/src/: lib.rs
repositories/: Cargo.toml  package.json
repositories/prisma/: schema.prisma
repositories/src/: lib.rs  prisma.rs
scrape-wish-list/: Cargo.toml
scrape-wish-list/src/: lib.rs  main.rs
scripts/prisma-cli/: Cargo.toml
