[package]
name = "domains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }
pure-funcs = { path = "../pure-funcs" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
url = "2.2.2"
futures = "0.3.24"
insta = "1.21.0"
once_cell = "1.15.0"
regex = "1.6.0"
libmath = "0.2.1"