[package]
name = "backend-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
domains = { path = "../../packages/domains" }
tokio = { version = "1.20.1", features = ["full"] }
clap = { version = "4.1.6", features = ["derive"]}
log = "0.4.0"
env_logger = "0.10.0"
queries = { path = "../../packages/queries" }